--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,18 @@
 .game-logo {
-
 }
 
 #start-game-button {
   border: 0;
   box-shadow: 0;
-  background: linear-gradient(to bottom, #9DA400, #BAC600);
+  background: linear-gradient(to bottom, #9da400, #bac600);
   color: #fff;
   padding: 20px 40px;
   font-size: 30px;
   border-radius: 5px;
+}
+
+#start-game-button:hover {
+  background: linear-gradient(to bottom, #9ca40070, #bac600);
 }
 
 #hangman {
